--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
     <script src="script.js"></script>
-    <p style="background-color:turquoise;"> HELLO TO COMPUTER SCIENCE.</p>
-  </body>
-  <h1 style="font-size:295%;">CODING</h1>
-  <p>THIS<br> IS SOMETHING I NEVER THOUGH ID DO LOL  <br>coding with line breaks ON MY THIRD DAY.<BR>WOW</p>
-  <p>This is a paragraph.</p>
-  <body
+    <p style="background-color:turquoise;"</p> 
+     <title>HELLO TO COMPUTER SCIENCE.</title>
+    </head>
+  <body style="background:red">
+    <h1>assignment #4<h1>
+      <p style="font-size:20%;">This is a paragraph.</p>
+  <p>THIS<br> IS SOMETHING I NEVER THOUGH ID DO LOL  <br>coding with line breaks ON MY THIRD DAY.<br>WOW</p>
+  <body>
 </html>
