--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="script.js"></script>
      <title>HELLO TO COMPUTER SCIENCE.</title>
-    </head>
   <body style="background:red">
     <h1>assignment #4<h1>
-      <p style= font size: 18pt> HELLO TO COMPUTER SCIENCE</P>
+      <p style= "font size: 18pt"> HELLO TO COMPUTER SCIENCE</p>
       <p style="font-size:20%;">This is a paragraph.</p>
   <p>THIS<br> IS SOMETHING I NEVER THOUGH ID DO LOL  <br>coding with line breaks ON MY THIRD DAY.<br>WOW</p>
-<P>This is the default font</p>
- </body></h1></h1></body>
+<p>This is the default font</p>
+ </body>
 </html>
