--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  </head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link href="style.css" rel="stylesheet" type="text/css" />
@@ -8,7 +8,7 @@
      <title>HELLO TO COMPUTER SCIENCE.</title>
   <body style="background:red">
     <h1>assignment #4</h1>
-      <p style= "font size: 18pt"> HELLO TO COMPUTER SCIENCE</p>
+      <p style= "font-size: 20pt"> HELLO TO COMPUTER SCIENCE</p>
       <p style="font-size:20%;">This is a paragraph.</p>
   <p>THIS<br> IS SOMETHING I NEVER THOUGH ID DO LOL  <br>coding with line breaks ON MY THIRD DAY.<br>WOW</p>
 <p>This is the default font</p>
