--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-  </head>
+  <head>
     <title>HELLO TO COMPUTER SCIENCE.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="script.js"></script>
+    </head>
   <body style="background:red">
     <h1>assignment #4</h1>
       <p style= "font-size: 20pt"> HELLO TO COMPUTER SCIENCE</p>
